# bbs-api-rust

./: .env  Cargo.toml  README.md
src/: db_manager.rs  env.rs  main.rs
src/categories/: mod.rs
src/common/: mod.rs
src/lib/: mod.rs
src/password/: inerface.rs  mod.rs
src/user/: db_model.rs  interface.rs  mod.rs
src/users/: mod.rs
