[package]
name = "bbs-api"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
axum = "0.7.5"
tower = "0.4.13"
serde_json = "1.0.122"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
ring = "0.17.8"